--- a/index8.html
+++ b/index8.html
@@ -94,7 +94,7 @@ nav a.active { z-index: 2;
   nav a::before { transform-origin: bottom left; }
 }
 
-/* Tabs with round edges: #32557f = dark blue, #fff = white */
+/* Tabs with trapezoidal edges: #32557f = dark blue, #fff = white */
 .tab-left-right {
   nav { padding-left: 1.3em; }
   nav a::before { transform-origin: bottom; }
@@ -112,10 +112,15 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-  /* nav a::before { background-color: none; margin-bottom: 0; border-radius: none; background: none; transform: none; } */
-  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; }
+
+  nav a::before {
+    background-color: none;
+    margin-bottom: 0;
+  }
+
   nav a.active{ background: #fff; color: #000; }
-  .content-container{
+
+  .content{
     position: absolute;
     width: 450px;
     height: auto;
@@ -128,13 +133,25 @@ nav a.active { z-index: 2;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
   }
-  /* Removes errors make tabs round */
-  /* a::before { border-radius: none; background: none; transform: none; } */
-  /* removes the outline [without round edges] around the selected tab */
+
+// To delete previous styles:
+  a::before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 0;
+    z-index: -1;
+    border-bottom: none;
+    border-radius: none;
+    background: none;
+    transform: none;
+  }
+
   nav > a::before { border: none; }
-  /* makes the non-selected tab white, removes the outline without round edges around non-selected tab */
   nav a.active { &::before { background-color: #fff; margin-bottom: 0; border-radius: 30px; }
+  }
 }
+
+	
 
 </style>
   
