--- a/index8.html
+++ b/index8.html
@@ -112,15 +112,9 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-
-  nav a::before {
-    background-color: none;
-    margin-bottom: 0;
-  }
-
+  nav a::before { background-color: none; margin-bottom: 0; }
   nav a.active{ background: #fff; color: #000; }
-
-  .content{
+  .content-container{
     position: absolute;
     width: 450px;
     height: auto;
@@ -133,7 +127,6 @@ nav a.active { z-index: 2;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
   }
-
 // To delete previous styles:
   a::before {
     content: '';
@@ -145,7 +138,6 @@ nav a.active { z-index: 2;
     background: none;
     transform: none;
   }
-
   nav > a::before { border: none; }
   nav a.active { &::before { background-color: #fff; margin-bottom: 0; border-radius: 30px; }
   }
