--- a/index8.html
+++ b/index8.html
@@ -101,6 +101,7 @@ nav a.active { z-index: 2;
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
+/* Improvements */
 .tab-round {
   nav { padding-left: .3em; }
   nav a {
@@ -112,8 +113,8 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-  nav a::before { background-color: none; margin-bottom: 0; }
-  nav a.active{ background: #fff; color: #000; }
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; }
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
     width: 450px;
@@ -127,20 +128,8 @@ nav a.active { z-index: 2;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
   }
-// To delete previous styles:
-  a::before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: -1;
-    border-bottom: none;
-    border-radius: none;
-    background: none;
-    transform: none;
-  }
+  /* Removes errors make tabs round */
   nav > a::before { border: none; }
-  nav a.active { &::before { background-color: #fff; margin-bottom: 0; border-radius: 30px; }
-  }
 }
 
 	
