--- a/index8.html
+++ b/index8.html
@@ -112,8 +112,8 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-  nav a::before { background-color: none; margin-bottom: 0; }
-  nav a.active{ background: #fff; color: #000; }
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
     width: 450px;
@@ -126,20 +126,6 @@ nav a.active { z-index: 2;
     z-index: 100;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
-  }
-// To delete previous styles:
-  a::before {
-    content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: -1;
-    border-bottom: none;
-    border-radius: none;
-    background: none;
-    transform: none;
-  }
-  nav > a::before { border: none; }
-  nav a.active { &::before { background-color: #fff; margin-bottom: 0; border-radius: 30px; }
   }
 }
 
