--- a/index8.html
+++ b/index8.html
@@ -4,7 +4,7 @@
 <body>
 
 <!-- container -->
-<div class="tabs tab-round" id="tabs_container">
+<div class="tabs tab-left-right" id="tabs_container">
 
   <!-- tabs -->
   <nav>
@@ -52,6 +52,7 @@ body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; backgrou
 }
 
 /* #7eb4e2 = light blue, #fff = white */
+/* & > a refers to the node_c element <a> within the node_p element. It is equivalent to "nav a { }". */
 nav { position: relative; z-index: 1;
   & > a {
     position: relative;
@@ -63,7 +64,8 @@ nav { position: relative; z-index: 1;
     margin: 0 -.3em; }
 
   & > a::before { border: .2em solid #fff; }
-
+  /* Insert a background before the tabs "<a>". */
+  /* `a::before` is a pseudo-element that allows you to insert content before the content of an "<a>" element. */
   a::before {
     content: '';
     position: absolute;
@@ -77,6 +79,7 @@ nav { position: relative; z-index: 1;
 }
 
 /* #32557f = dark blue */
+/* &::before refers to the node_p element before any content is inserted */
 nav a.active { z-index: 2;
   &::before {
     background-color: #32557f;
