--- a/index8.html
+++ b/index8.html
@@ -4,7 +4,7 @@
 <body>
 
 <!-- container -->
-<div class="tabs tab-left-right" id="tabs_container">
+<div class="tabs tab-left" id="tabs_container">
 
   <!-- tabs -->
   <nav>
@@ -64,7 +64,7 @@ nav { position: relative; z-index: 1;
     margin: 0 -.3em; }
 
   & > a::before { border: .2em solid #fff; }
-  /* Insert a background before the tabs "<a>". */
+  /* Transform inserts a background before the tabs "<a>". */
   /* `a::before` is a pseudo-element that allows you to insert content before the content of an "<a>" element. */
   a::before {
     content: '';
