--- a/index8.html
+++ b/index8.html
@@ -73,23 +73,19 @@ nav a.active { z-index: 2;
 }
 
 .tab-right {
-  nav { padding-left: 2.3em; }
-  /* nav a::before { transform-origin: bottom right; } */
-  /* OR */
-  /* nav a::before { padding: 10px 20px; border-radius: 5px 5px 0 0; } */
-  /* OR */
-  nav a { padding: 10px 20px; border-radius: 5px 5px 0 0; }
+  nav { padding-left: 0px; }
+  nav a { padding: 10px 20px; border-radius: 0 5px 0 0; }
 }
 
 .tab-left {
-  nav { padding-left: .3em; }
-  nav a::before { transform-origin: bottom left; }
+  nav { padding-left: 5px; }
+  nav a { padding: 10px 20px; border-radius: 5px 0 0 0; }
 }
 
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
 .tab-left-right {
-  nav { padding-left: 1.3em; }
-  nav a::before { transform-origin: bottom; }
+  nav { padding-left: 5px; }
+  nav a { padding: 10px 20px; border-radius: 5px 5px 0 0; }
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
