--- a/index8.html
+++ b/index8.html
@@ -4,7 +4,7 @@
 <body>
 
 <!-- container -->
-<div class="tabs tab-round" id="tabs_container">
+<div class="tabs tab-left" id="tabs_container">
 
   <!-- tabs -->
   <nav>
