--- a/index8.html
+++ b/index8.html
@@ -80,7 +80,7 @@ nav a.active { z-index: 2;
 
 .tab-left {
   nav { padding-left: 5px; }
-  nav a { border-radius: 5px 0 0 0; }
+  nav a::before { border-radius: 5px 0 0 0; }
 }
 
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
