--- a/index8.html
+++ b/index8.html
@@ -153,7 +153,7 @@ document.getElementById("dropdown_options").addEventListener("change", processEv
 
 // -----------------------------------------
 	
-async function construct_DOM_elements(tabs_container_class, tab_num) {
+async function construct_DOM_elements() {
 	
 	const tab_num = document.getElementById("tab_num").value;
 	
