--- a/index9.html
+++ b/index9.html
@@ -92,7 +92,7 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; position: absolute; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
