--- a/index9.html
+++ b/index9.html
@@ -32,6 +32,7 @@ body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; backgrou
 
 /* color = text color, background = sets multiple background properties at once, including background-color,  background-color = background color, #32557f = dark blue, #fff = white */
 .content-container { 
+	position: absolute;
 	min-width: 600px; 
 	max-width: 600px; 
 	display: block; 
@@ -92,7 +93,7 @@ nav a.active { z-index: 2;
     height: 100px;
     margin-right: 1px;
   }
-  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; position: absolute; }
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
