--- a/index9.html
+++ b/index9.html
@@ -4,7 +4,7 @@
 <body>
 
 
-<div class="tabs tab-right" id="tabs_container">
+<div class="tabs tab-left-right" id="tabs_container">
   <nav>
     <a class="tabs-nav-link active" href="#" id="tabs_Main">Main</a>
     <a class="tabs-nav-link" href="#" id="tabs_About">About</a>
