--- a/index8.html
+++ b/index8.html
@@ -164,6 +164,16 @@ async function construct_DOM_elements_w_strings() {
 		</div>`;
 	console.log("htmlString: ", htmlString);
 
+	/*<div class="tabs tabs tab-left" id="tabs_container">
+		  <nav>
+		    <a class=tabs tab-left active href="#" id="tabs_0">Tab 0</a>
+      <a class=tabs tab-left href="#" id="tabs_1">Tab 1</a>
+		  </nav>
+		  <div class="content-container" id="tabs_content_0"><h1 class="content-title" id="tabs_content_title_0">Title 0</h1><p class="content-text" id="tabs_content_text_0">Text 0</p></div><div class="content-container" id="tabs_content_1"><h1 class="content-title" id="tabs_content_title_1">Title 1</h1><p class="content-text" id="tabs_content_text_1">Text 1</p></div>
+		</div>
+
+*/
+
 	 var htmlNode = document.createRange().createContextualFragment(htmlString);
 	 document.getElementById('display_UI').appendChild(htmlNode);
 }
