--- a/index8.html
+++ b/index8.html
@@ -143,7 +143,7 @@ async function construct_DOM_elements_w_strings() {
 	var aElement = "";
 	for (let i=0; i<tab_num; i++) {
 		var aElement_class = i == 0 ? "tabs-nav-link active" : "tabs-nav-link";
-		aElement = aElement + `<a class=${aElement_class} href="#" id="tabs_${i}">Tab ${i}</a>`;
+		aElement = aElement + `<a class="${aElement_class}" href="#" id="tabs_${i}">Tab ${i}</a>`;
 	}
 
 	// Create content under each tab
@@ -164,12 +164,20 @@ async function construct_DOM_elements_w_strings() {
 		</div>`;
 	console.log("htmlString: ", htmlString);
 
-	/*<div class="tabs tabs tab-left" id="tabs_container">
+	/*
+  <div class="tabs tabs tab-right" id="tabs_container">
 		  <nav>
-		    <a class=tabs tab-left active href="#" id="tabs_0">Tab 0</a>
-      <a class=tabs tab-left href="#" id="tabs_1">Tab 1</a>
+		    <a class=tabs-nav-link active href="#" id="tabs_0">Tab 0</a>
+      <a class=tabs-nav-link href="#" id="tabs_1">Tab 1</a>
 		  </nav>
-		  <div class="content-container" id="tabs_content_0"><h1 class="content-title" id="tabs_content_title_0">Title 0</h1><p class="content-text" id="tabs_content_text_0">Text 0</p></div><div class="content-container" id="tabs_content_1"><h1 class="content-title" id="tabs_content_title_1">Title 1</h1><p class="content-text" id="tabs_content_text_1">Text 1</p></div>
+		  <div class="content-container" id="tabs_content_0">
+    <h1 class="content-title" id="tabs_content_title_0">Title 0</h1>
+    <p class="content-text" id="tabs_content_text_0">Text 0</p>
+    </div>
+    <div class="content-container" id="tabs_content_1">
+    <h1 class="content-title" id="tabs_content_title_1">Title 1</h1>
+    <p class="content-text" id="tabs_content_text_1">Text 1</p>
+    </div>
 		</div>
 
 
@@ -193,8 +201,16 @@ async function construct_DOM_elements_w_strings() {
 
 	 var htmlNode = document.createRange().createContextualFragment(htmlString);
 	 document.getElementById('display_UI').appendChild(htmlNode);
+
+	// Dynamically create addEventListener for each `tabs_${i}`.
+	for (let i=0; i<tab_num; i++) {
+		await tabs_addEventListener(i, tab_num);
+	}
+
+	console.log("tabs_container DOM elements: ", document.getElementById('tabs_container'));
 }
 
+// -----------------------------------------
 	
 async function construct_DOM_elements() {
 	
@@ -249,8 +265,6 @@ async function construct_DOM_elements() {
 
 	console.log("tabs_container DOM elements: ", document.getElementById('tabs_container'));
 }
-
-
 	
 // -----------------------------------------
 
