--- a/index8.html
+++ b/index8.html
@@ -70,28 +70,34 @@ nav a.active { z-index: 2;
 }
 
 .tab-left {
-  nav { padding-left: 5px; }
-  nav a::before { border-radius: 5px 0 0 0; }
+  nav { padding-left: 4.8px; }
+  nav a::before { border-radius: 5px 0 0 0; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
+  .content-container{
+    position: absolute;
+    width: 450px;
+    height: auto;
+    margin-top: -50px;
+    margin-bottom: 50px;
+    background: #fff;
+    color: #000;
+    border-radius: 30px;
+    z-index: 100;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+    padding: 30px;
+  }
 }
 
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
 .tab-left-right {
-  nav { padding-left: 5px; }
+  nav { padding-left: 4.8px; }
   nav a { border-radius: 5px 5px 0 0; }
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
 .tab-round {
-  nav { padding-left: .3em; }
-  nav a {
-    padding-top: 13px;
-    text-align: center;
-    background: #32557f;
-    color: #fff;
-    border-radius: 30px;
-    height: 100px;
-    margin-right: 1px;
-  }
+  nav { padding-left: 4.8px; }
+  nav a { border-radius: 30px; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
@@ -165,19 +171,11 @@ async function construct_DOM_elements_w_strings() {
 	console.log("htmlString: ", htmlString);
 
 	/*
-  <div class="tabs tabs tab-right" id="tabs_container">
+<div class="tabs tab-left-right" id="tabs_container">
 		  <nav>
-		    <a class=tabs-nav-link active href="#" id="tabs_0">Tab 0</a>
-      <a class=tabs-nav-link href="#" id="tabs_1">Tab 1</a>
+		    <a class="tabs-nav-link active" href="#" id="tabs_0">Tab 0</a><a class="tabs-nav-link" href="#" id="tabs_1">Tab 1</a>
 		  </nav>
-		  <div class="content-container" id="tabs_content_0">
-    <h1 class="content-title" id="tabs_content_title_0">Title 0</h1>
-    <p class="content-text" id="tabs_content_text_0">Text 0</p>
-    </div>
-    <div class="content-container" id="tabs_content_1">
-    <h1 class="content-title" id="tabs_content_title_1">Title 1</h1>
-    <p class="content-text" id="tabs_content_text_1">Text 1</p>
-    </div>
+		  <div class="content-container" id="tabs_content_0"><h1 class="content-title" id="tabs_content_title_0">Title 0</h1><p class="content-text" id="tabs_content_text_0">Text 0</p></div><div class="content-container" id="tabs_content_1"><h1 class="content-title" id="tabs_content_title_1">Title 1</h1><p class="content-text" id="tabs_content_text_1">Text 1</p></div>
 		</div>
 
 
