--- a/index8.html
+++ b/index8.html
@@ -71,7 +71,7 @@ nav a.active { z-index: 2;
 
 .tab-left {
   nav { padding-left: 4.8px; }
-  nav a::before { border-radius: 5px 0 0 0; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
+  nav a::before { border-radius: 5px 0 0 0; text-align: center; background: #32557f; color: #fff; margin-right: 1px; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
