--- a/index8.html
+++ b/index8.html
@@ -46,15 +46,16 @@ nav { position: relative; z-index: 1; }
 
 nav a { position: relative; width: 10em; display: inline-block; padding: .7em 2em .5em; color: #fff; text-decoration: none; margin: 0 -.3em; }
 
-nav a::before { border: .2em solid #fff; 
-	       content: '';
-    position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
-    z-index: -1;
-    border-bottom: none;
-    border-radius: .4em .4em 0 0;
-    background: #7eb4e2;
-    transform: scale(1.2, 1.3) perspective(.5em) rotateX(5deg);
+nav a::before { 
+	border: .2em solid #fff; 
+	content: '';
+	position: absolute;
+	top: 0; right: 0; bottom: 0; left: 0;
+	z-index: -1;
+	border-bottom: none;
+	border-radius: .4em .4em 0 0;
+	background: #7eb4e2;
+	/* transform: scale(1.2, 1.3) perspective(.5em) rotateX(5deg); */
 }
 
 /* #32557f = dark blue */
@@ -71,10 +72,10 @@ nav a.active { z-index: 2;
 
 .tab-left {
   nav { padding-left: 4.8px; }
-  nav a::before { border-radius: 5px 0 0 0; text-align: center; background: #32557f; color: #fff; margin-right: 1px; }
+  nav a::before { border-radius: 5px 0 0 0; text-align: center; background: #32557f; color: #fff; margin-right: 5px; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
-    position: absolute;
+    position: relative;
     width: 450px;
     height: auto;
     margin-top: -50px;
