--- a/index8.html
+++ b/index8.html
@@ -66,8 +66,8 @@ nav a.active { z-index: 2;
 
 /* border-radius: top-left | top-right | bottom-right | bottom-left */
 .tab-right {
-  nav { padding-left: 0px; }
-  nav a { border-radius: 0 5px 0 0; }
+  nav { padding-left: 4.8px; }
+  nav a { border-radius: 0 20px 0 0; }
 }
 
 .tab-left {
@@ -75,7 +75,7 @@ nav a.active { z-index: 2;
   nav a::before { border-radius: 5px 0 0 0; text-align: center; background: #32557f; color: #fff; margin-right: 5px; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
-    position: relative;
+    position: absolute;
     width: 450px;
     height: auto;
     margin-top: -50px;
@@ -92,7 +92,7 @@ nav a.active { z-index: 2;
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
 .tab-left-right {
   nav { padding-left: 4.8px; }
-  nav a { border-radius: 5px 5px 0 0; }
+  nav a { border-radius: 20px 20px 0 0; }
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
