--- a/index9.html
+++ b/index9.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body>
+<body>https://github.com/CodeSolutions2/temp_repo3/edit/main/index9.html
 
 <!-- Drop down menu: put in body -->
 <label for="select_dropdown_option_label">Select a drop down option:</label>
@@ -38,13 +38,19 @@ body { font-family: 'Lato', sans-serif; font-size: 14px; padding: 70px; backgrou
 	display: block; 
   /* margin-top: -50px; */
 	margin-bottom: 50px;
+	
 	background: #32557f;
   color: #fff;
+	
   border-radius: .15em; 
-	padding: 2em 3em; 
-	/* z-index: 100; */
+	
+    padding: 2em 3em; 
+    /* z-index: 200; */
+	
   /* box-shadow: 0px 10px 10px rgba(0, 0, 0, .4); */
+	
   /* padding: 30px; */
+	
 	border: .2em solid #fff;
 }
 
@@ -83,16 +89,30 @@ nav a.active { z-index: 2;
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
     position: absolute;
+	  
+    /* min-width: 600px; */
+    /* max-width: 600px; */
+	  
     width: 450px;
     height: auto;
+	  
+    /* display: block; */
+	  
     margin-top: -50px;
     margin-bottom: 50px;
+	  
     background: #fff;
     color: #000;
+	  
     border-radius: 30px;
-    z-index: 100;
+	  
+    z-index: 200;
+	  
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+	  
     padding: 30px;
+
+    /* border: .2em solid #fff; */
   }
 }
 
