--- a/index9.html
+++ b/index9.html
@@ -88,15 +88,23 @@ nav a.active { z-index: 2;
 
 .tab-left {
   nav { padding-left: 4.8px; }
-  nav a { border-radius: 20px 0 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
+  nav a { border-radius: 100px 0 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
-  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 20px 0 0 0; }
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; }
+	.content-container{
+background: #fff;
+    color: #000;
+    border-radius: 30px;
+    z-index: 100;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+    padding: 30px;
+		  }
 }
 
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
 .tab-left-right {
   nav { padding-left: 4.8px; }
-  nav a { border-radius: 20px 20px 0 0; }
+  nav a { border-radius: 100px 100px 0 0; }
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
