--- a/index9.html
+++ b/index9.html
@@ -92,6 +92,7 @@ nav a.active { z-index: 2;
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; }
 	.content-container{
+		position: absolute;
 background: #fff;
     color: #000;
     border-radius: 30px;
@@ -113,7 +114,16 @@ background: #fff;
   nav a { border-radius: 30px; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
-  
+  .content-container{
+		margin-top: -50px;
+    margin-bottom: 50px;
+background: #fff;
+    color: #000;
+    border-radius: 30px;
+    z-index: 100;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+    padding: 30px;
+		  }
 }
 </style>
   
