--- a/index9.html
+++ b/index9.html
@@ -92,7 +92,8 @@ nav a.active { z-index: 2;
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; }
 	.content-container{
-		position: absolute;
+		margin-top: -50px;
+    margin-bottom: 50px;
 background: #fff;
     color: #000;
     border-radius: 30px;
@@ -120,7 +121,6 @@ background: #fff;
 background: #fff;
     color: #000;
     border-radius: 30px;
-    z-index: 100;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
 		  }
