--- a/index9.html
+++ b/index9.html
@@ -92,12 +92,12 @@ nav a.active { z-index: 2;
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; }
 	.content-container{
-		margin-top: -50px;
-    margin-bottom: 50px;
+		margin-top: -50px; /* makes the tabs the right height wrt the content-container */
+    margin-bottom: 50px; /* makes the tabs the right height wrt the content-container */
 background: #fff;
     color: #000;
     border-radius: 30px;
-    z-index: 100;
+    z-index: 100; /* makes the tabs behind the content-container */
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
 		  }
@@ -116,11 +116,12 @@ background: #fff;
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
   nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 30px; }
   .content-container{
-		margin-top: -50px;
-    margin-bottom: 50px;
+		margin-top: -50px; /* makes the tabs the right height wrt the content-container */
+    margin-bottom: 50px; /* makes the tabs the right height wrt the content-container */
 background: #fff;
     color: #000;
     border-radius: 30px;
+	  z-index: 100; /* makes the tabs behind the content-container */
     box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
     padding: 30px;
 		  }
