--- a/index9.html
+++ b/index9.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body>https://github.com/CodeSolutions2/temp_repo3/edit/main/index9.html
+<body>
 
 <!-- Drop down menu: put in body -->
 <label for="select_dropdown_option_label">Select a drop down option:</label>
 <select name="dropdown_options" id="dropdown_options" style="display:block">
   <option value="---">Select an option</option>
-  <option value="tabs_left">tabs_left</option>
-  <option value="tabs_right">tabs_right</option>
-  <option value="tabs_left_right">tabs_left_right</option>
-  <option value="tabs_round">tabs_round</option>
+  <option value="tab-right-box-shadow">tab-right-box-shadow</option>
+  <option value="tab-right">tab-right</option>
+  <option value="tab-left-box-shadow">tab-left-box-shadow</option>
+  <option value="tab-left">tab-left</option>
+  <option value="tab-round-box-shadow">tab-round-box-shadow</option>
+  <option value="tab-round">tab-round</option>
 </select>
 
 <input id="tab_num" type="text" wrap="hard" value="" placeholder="Enter the number of tabs to create" rows="10" cols="100" style="display:none; text-align: left; width: 100px; word-wrap: break-word; word-break: break-all;">
@@ -81,36 +83,55 @@ nav a.active { z-index: 2;
 }
 
 /* border-radius: top-left | top-right | bottom-right | bottom-left */
+.tab-right-box-shadow {
+  nav { padding-left: 4.8px; }
+  nav a { border-radius: 0 100px 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; } /*  */
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 0 100px 0 0; } /* Changes background and font onclick */
+  /* Changes the content-container area to have a box-shadow and align content-container with tabs */
+  .content-container{
+		margin-top: -50px; /* makes the tabs the right height wrt the content-container */
+    		margin-bottom: 50px; /* makes the tabs the right height wrt the content-container */
+    		background: #fff;
+    		color: #000;
+    		border-radius: 30px;
+    		z-index: 100; /* makes the tabs behind the content-container */
+    		box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+    		padding: 30px;
+  }
+}
+	
 .tab-right {
   nav { padding-left: 4.8px; }
-  nav a { border-radius: 0 20px 0 0; }
+  nav a { border-radius: 0 100px 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
 }
 
-.tab-left {
+.tab-left-box-shadow {
   nav { padding-left: 4.8px; }
   nav a { border-radius: 100px 0 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
-  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
-  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; }
-	.content-container{
+  nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; } /*  */
+  nav a.active{ background: #fff; color: #000; margin-bottom: 0; border-radius: 100px 0 0 0; } /* Changes background and font onclick */
+  /* Changes the content-container area to have a box-shadow and align content-container with tabs */
+  .content-container{
 		margin-top: -50px; /* makes the tabs the right height wrt the content-container */
-    margin-bottom: 50px; /* makes the tabs the right height wrt the content-container */
-background: #fff;
-    color: #000;
-    border-radius: 30px;
-    z-index: 100; /* makes the tabs behind the content-container */
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
-    padding: 30px;
-		  }
+    		margin-bottom: 50px; /* makes the tabs the right height wrt the content-container */
+    		background: #fff;
+    		color: #000;
+    		border-radius: 30px;
+    		z-index: 100; /* makes the tabs behind the content-container */
+    		box-shadow: 0px 10px 10px rgba(0, 0, 0, .4);
+    		padding: 30px;
+  }
 }
 
 /* Tabs shifted to the right: #32557f = dark blue, #fff = white */
-.tab-left-right {
+.tab-left {
   nav { padding-left: 4.8px; }
-  nav a { border-radius: 100px 100px 0 0; }
+  nav a { border-radius: 100px 0 0 0; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 5px; }
 }
 
 /* Tabs with round edges: #32557f = dark blue, #fff = white */
-.tab-round {
+.tab-round-box-shadow {
   nav { padding-left: 4.8px; }
   nav a { border-radius: 30px; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
   nav a::before { margin-bottom: 0; border-radius: none; background: none; transform: none; border: none; }
@@ -126,9 +147,18 @@ background: #fff;
     padding: 30px;
 		  }
 }
+
+.tab-round {
+  nav { padding-left: 4.8px; }
+  nav a { border-radius: 30px; padding-top: 13px; text-align: center; background: #32557f; color: #fff; height: 100px; margin-right: 1px; }
+}
 </style>
   
 <script>
+
+// -----------------------------------------
+//  program0 functions 
+// -----------------------------------------
 var tabs_container_class;
 	
 async function processEvent_dropdown_options(event) {
@@ -137,13 +167,17 @@ async function processEvent_dropdown_options(event) {
 	console.log('element.selectedIndex: ', element.selectedIndex);
 	
 	if (document.getElementById("dropdown_options").selectedIndex == 1) {
-		tabs_container_class = "tabs tab-left";
+		tabs_container_class = "tabs tab-right-box-shadow";
 	} else if (document.getElementById("dropdown_options").selectedIndex == 2) {
 		tabs_container_class = "tabs tab-right";
 	} else if (document.getElementById("dropdown_options").selectedIndex == 3) {
-		tabs_container_class = "tab-left-right";
+		tabs_container_class = "tabs tab-left-box-shadow";
 	} else if (document.getElementById("dropdown_options").selectedIndex == 4) {
-		tabs_container_class = "tab-round";
+		tabs_container_class = "tabs tab-left";
+	} else if (document.getElementById("dropdown_options").selectedIndex == 5) {
+		tabs_container_class = "tabs tab-round-box-shadow";
+	} else if (document.getElementById("dropdown_options").selectedIndex == 6) {
+		tabs_container_class = "tabs tab-round";
 	}
 
 	document.getElementById("tab_num").style.display = 'block';
@@ -153,132 +187,24 @@ document.getElementById("dropdown_options").addEventListener("change", processEv
 
 // -----------------------------------------
 
-async function construct_DOM_elements_w_strings() {
+async function run_program0() {
 
-	const tab_num = document.getElementById("tab_num").value;
-
-	// Create tabs
-	var aElement = "";
-	for (let i=0; i<tab_num; i++) {
-		var aElement_class = i == 0 ? "tabs-nav-link active" : "tabs-nav-link";
-		aElement = aElement + `<a class="${aElement_class}" href="#" id="tabs_${i}">Tab ${i}</a>`;
-	}
-
-	// Create content under each tab
-	var divElement = "";
-	var h1Element = "";
-	var pElement = "";
-	for (let i=0; i<tab_num; i++) {
-		h1Element = `<h1 class="content-title" id="tabs_content_title_${i}">Title ${i}</h1>`;
-		pElement = `<p class="content-text" id="tabs_content_text_${i}">Text ${i}</p>`;
-		divElement = divElement + `<div class="content-container" id="tabs_content_${i}">` + h1Element + pElement + "</div>";
-	}
-	
-	 const htmlString = `<div class="tabs ${tabs_container_class}" id="tabs_container">
-		  <nav>
-		    ${aElement}
-		  </nav>
-		  ${divElement}
-		</div>`;
-	console.log("htmlString: ", htmlString);
-
-	/*
-<div class="tabs tab-left-right" id="tabs_container">
-		  <nav>
-		    <a class="tabs-nav-link active" href="#" id="tabs_0">Tab 0</a><a class="tabs-nav-link" href="#" id="tabs_1">Tab 1</a>
-		  </nav>
-		  <div class="content-container" id="tabs_content_0"><h1 class="content-title" id="tabs_content_title_0">Title 0</h1><p class="content-text" id="tabs_content_text_0">Text 0</p></div><div class="content-container" id="tabs_content_1"><h1 class="content-title" id="tabs_content_title_1">Title 1</h1><p class="content-text" id="tabs_content_text_1">Text 1</p></div>
-		</div>
-
-
-	const htmlString = `<div class="tabs ${tabs_container_class}" id="tabs_container">
-  <nav>
-    <a class="tabs-nav-link active" href="#" id="tabs_Main">Main</a>
-    <a class="tabs-nav-link" href="#" id="tabs_About">About</a>
-  </nav>
-  <div class="content-container" id="tabs_content_Main">
-    <h1 class="content-title" id="tabs_content_title_Main">Main Title</h1>
-    <p class="content-text" id="tabs_content_text_Main">Main Text</p>
-  </div>
-  <div class="content-container" id="tabs_content_About">
-    <h1 class="content-title" id="tabs_content_title_About">About Title</h1>
-    <p class="content-text" id="tabs_content_text_About">About Text</p>
-  </div>
-</div>`;
-
-
-*/
-
-	 var htmlNode = document.createRange().createContextualFragment(htmlString);
-	 document.getElementById('display_UI').appendChild(htmlNode);
-
-	// Dynamically create addEventListener for each `tabs_${i}`.
-	for (let i=0; i<tab_num; i++) {
-		await tabs_addEventListener(i, tab_num);
-	}
-
-	console.log("tabs_container DOM elements: ", document.getElementById('tabs_container'));
 }
-
 // -----------------------------------------
+
+
+
 	
-async function construct_DOM_elements() {
-	
-	const tab_num = document.getElementById("tab_num").value;
-	
-	// Create container
-	var divElement_tabs_container = document.createElement("div");
-	divElement_tabs_container.class = tabs_container_class;
-	divElement_tabs_container.id = "tabs_container";
+// -----------------------------------------
+// Library functions
+// -----------------------------------------
 
-	// Create tabs
-	var navElement = document.createElement("nav");
-	for (let i=0; i<tab_num; i++) {
-		var aElement = document.createElement("a");
-		aElement.class = i == 0 ? "tabs-nav-link active" : "tabs-nav-link";
-		aElement.href = "#";
-		aElement.id = `tabs_${i}`;
-	 	aElement.value = `Tab ${i}`;
-		navElement.appendChild(aElement);
-	}
-	divElement_tabs_container.appendChild(navElement);
-	
-	// Create content under each tab
-	for (let i=0; i<tab_num; i++) {
-		var divElement = document.createElement("div");
-		divElement.class = "content-container";
-		divElement.id = `tabs_content_${i}`;
-
-		var h1Element = document.createElement("h1");
-		h1Element.class = "content-title";
-		h1Element.id = `tabs_content_title_${i}`;
-	 	h1Element.value = `Title ${i}`;
-		
-		divElement.appendChild(h1Element);
-
-		var pElement = document.createElement("p");
-		pElement.class = "content-text";
-		pElement.id = `tabs_content_text_${i}`;
-	 	pElement.value = `Text ${i}`;
-
-		divElement.appendChild(pElement);
-		divElement_tabs_container.appendChild(divElement);
-	}
-	
-	// document.getElementById("display_UI").appendChild(divElement_tabs_container);
-	document.body.appendChild(divElement_tabs_container);
-
-	// Dynamically create addEventListener for each `tabs_${i}`.
-	for (let i=0; i<tab_num; i++) {
-		await tabs_addEventListener(i, tab_num);
-	}
-
-	console.log("tabs_container DOM elements: ", document.getElementById('tabs_container'));
-}
 	
 // -----------------------------------------
 
-async function tabs_addEventListener(i, tab_num) {
+function tabs_addEventListener(htmlString) {
+
+	// Just with the htmlString, determine how many eventlisteners are needed 
 	
 	document.getElementById(`tabs_${i}`).addEventListener("click", async () => {
 		// console.log("document.querySelector('.tabs'): ", document.querySelector('.tabs'));
